--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab6p2_Kennethespinoza
-main.class=lab6p2_kennethespinoza.Lab6p2_Kennethespinoza
+main.class=lab6p2_kennethespinoza.engordar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
